# webgpu-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  MakeProject.bat  README.md  build.bat  main.cpp  xmake.lua
src/: gpu.cpp  gpu.hpp  main.cpp  window.cpp  window.hpp
src/math/: point2.hpp  vector3.hpp
